# flowers

./: .gitignore  Cargo.toml
src/: color.rs  common.rs  flower.rs  graphics.rs  lib.rs  math.rs  mosaic.rs  petal.rs  rand.rs
src/graphics/: image.rs  mod.rs  render.rs
src/graphics/color/: convert.rs  gradient.rs  mod.rs  theory.rs
src/graphics/noise/: mod.rs  theory.rs
src/math/: area.rs  curve.rs  mod.rs  real.rs
